Добавляет изображения продуктов в карточки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,11 +16,11 @@
       <a class="page-header__logo logo" href="index.html">
         <picture>
           <source type="image/svg" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
-          <source type="image/webp" width="174" height="50" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.webp">
-          <source type="image/webp" width="174" height="50" media="(min-width: 1440px)" srcset="images/logo-desktop@2x.webp">
+          <source type="image/png" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.png, images/logo-desktop@2x.png 2x">
+          <source type="image/webp" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.webp, images/logo-desktop@2x.webp 2x">
           <source type="image/svg" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
-          <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.webp">
-          <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@2x.webp">
+          <source type="image/png" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.png, images/logo-tablet@2x.png 2x">
+          <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.webp, images/logo-tablet@2x.webp 2x">
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
         <svg class="logo__image-title" width="101" height="18" alt="Логотип Cat Energy">
@@ -49,7 +49,13 @@
         <ul class="catalog__list">
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" width="68" height="86" src="images/catalog-chicken-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
+              <picture>
+                <source type="image/png" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-pro-500-chicken-desktop@1x.png, images/catenergy-pro-500-chicken-desktop@2x.png 2x">
+                <source type="image/webp" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-pro-500-chicken-desktop@1x.webp, images/catenergy-pro-500-chicken-desktop@2x.webp 2x">
+                <source type="image/webp" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-pro-500-chicken-tablet@1x.webp, images/catenergy-pro-500-chicken-tablet@2x.webp 2x">
+                <source type="image/png" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-pro-500-chicken-tablet@1x.png, images/catenergy-pro-500-chicken-tablet@2x.png 2x">
+                <img class="product__image" width="68" height="87" src="images/catenergy-pro-500-chicken-mobile@1x.png" srcset="images/catenergy-pro-500-chicken-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
+              </picture>
             </a>
             <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
@@ -68,7 +74,13 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="images/catalog-chicken-big.png" width="84" height="100" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
+              <picture>
+                <source type="image/png" width="169" height="196" media="(min-width: 1440px)" srcset="images/catenergy-pro-1000-chicken-desktop@1x.png, images/catenergy-pro-1000-chicken-desktop@2x.png 2x">
+                <source type="image/webp" width="169" height="196" media="(min-width: 1440px)" srcset="images/catenergy-pro-1000-chicken-desktop@1x.webp, images/catenergy-pro-1000-chicken-desktop@2x.webp 2x">
+                <source type="image/webp" width="168" height="206" media="(min-width: 768px)" srcset="images/catenergy-pro-1000-chicken-tablet@1x.webp, images/catenergy-pro-1000-chicken-tablet@2x.webp 2x">
+                <source type="image/png" width="168" height="206" media="(min-width: 768px)" srcset="images/catenergy-pro-1000-chicken-tablet@1x.png, images/catenergy-pro-1000-chicken-tablet@2x.png 2x">
+                <img class="product__image" width="84" height="101" src="images/catenergy-pro-1000-chicken-mobile@1x.png" srcset="images/catenergy-pro-1000-chicken-mobile@2x.png 2x" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
+              </picture>
             </a>
             <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
@@ -87,7 +99,13 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="images/catalog-fish-small.png" width="68" height="86" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
+              <picture>
+                <source type="image/png" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-pro-500-fish-desktop@1x.png, images/catenergy-pro-500-fish-desktop@2x.png 2x">
+                <source type="image/webp" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-pro-500-fish-desktop@1x.webp, images/catenergy-pro-500-fish-desktop@2x.webp 2x">
+                <source type="image/webp" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-pro-500-fish-tablet@1x.webp, images/catenergy-pro-500-fish-tablet@2x.webp 2x">
+                <source type="image/png" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-pro-500-fish-tablet@1x.png, images/catenergy-pro-500-fish-tablet@2x.png 2x">
+                <img class="product__image" width="68" height="87" src="images/catenergy-pro-500-fish-mobile@1x.png" srcset="images/catenergy-pro-500-fish-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
+              </picture>
             </a>
             <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
@@ -106,7 +124,13 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="images/catalog-fish-big.png" width="84" height="100" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
+              <picture>
+                <source type="image/png" width="169" height="196" media="(min-width: 1440px)" srcset="images/catenergy-pro-1000-fish-desktop@1x.png, images/catenergy-pro-1000-fish-desktop@2x.png 2x">
+                <source type="image/webp" width="169" height="196" media="(min-width: 1440px)" srcset="images/catenergy-pro-1000-fish-desktop@1x.webp, images/catenergy-pro-1000-fish-desktop@2x.webp 2x">
+                <source type="image/webp" width="168" height="206" media="(min-width: 768px)" srcset="images/catenergy-pro-1000-fish-tablet@1x.webp, images/catenergy-pro-1000-fish-tablet@2x.webp 2x">
+                <source type="image/png" width="168" height="206" media="(min-width: 768px)" srcset="images/catenergy-pro-1000-fish-tablet@1x.png, images/catenergy-pro-1000-fish-tablet@2x.png 2x">
+                <img class="product__image" width="84" height="101" src="images/catenergy-pro-1000-fish-mobile@1x.png" srcset="images/catenergy-pro-1000-fish-mobile@2x.png 2x" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба.">
+              </picture>
             </a>
             <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
@@ -125,11 +149,17 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="images/catalog-buckwheat-small.png" width="68" height="86" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
+              <picture>
+                <source type="image/png" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-500-buckwheat-desktop@1x.png, images/catenergy-slim-500-buckwheat-desktop@2x.png 2x">
+                <source type="image/webp" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-500-buckwheat-desktop@1x.webp, images/catenergy-slim-500-buckwheat-desktop@2x.webp 2x">
+                <source type="image/webp" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-500-buckwheat-tablet@1x.webp, images/catenergy-slim-500-buckwheat-tablet@2x.webp 2x">
+                <source type="image/png" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-500-buckwheat-tablet@1x.png, images/catenergy-slim-500-buckwheat-tablet@2x.png 2x">
+                <img class="product__image" width="68" height="87" src="images/catenergy-slim-500-buckwheat-mobile@1x.png" srcset="images/catenergy-slim-500-buckwheat-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
+              </picture>
             </a>
             <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
-                <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
+                <h2 class="product__title">Cat Energy<br> Slim 500&nbsp;г</h2>
               </a>
               <dl class="product__info">
                 <dt>Масса</dt>
@@ -144,7 +174,13 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="images/catalog-buckwheat-big.png" width="84" height="100" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
+              <picture>
+                <source type="image/png" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-1000-buckwheat-desktop@1x.png, images/catenergy-slim-1000-buckwheat-desktop@2x.png 2x">
+                <source type="image/webp" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-1000-buckwheat-desktop@1x.webp, images/catenergy-slim-1000-buckwheat-desktop@2x.webp 2x">
+                <source type="image/webp" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-1000-buckwheat-tablet@1x.webp, images/catenergy-slim-1000-buckwheat-tablet@2x.webp 2x">
+                <source type="image/png" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-1000-buckwheat-tablet@1x.png, images/catenergy-slim-1000-buckwheat-tablet@2x.png 2x">
+                <img class="product__image" width="68" height="87" src="images/catenergy-slim-1000-buckwheat-mobile@1x.png" srcset="images/catenergy-slim-1000-buckwheat-mobile@2x.png 2x" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка.">
+              </picture>
             </a>
             <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
@@ -163,7 +199,13 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="images/catalog-rice-small.svg" width="68" height="86" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
+              <picture>
+                <source type="image/png" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-500-rice-desktop@1x.png, images/catenergy-slim-500-rice-desktop@2x.png 2x">
+                <source type="image/webp" width="161" height="172" media="(min-width: 1440px)" srcset="images/catenergy-slim-500-rice-desktop@1x.webp, images/catenergy-slim-500-rice-desktop@2x.webp 2x">
+                <source type="image/webp" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-500-rice-tablet@1x.webp, images/catenergy-slim-500-rice-tablet@2x.webp 2x">
+                <source type="image/png" width="162" height="173" media="(min-width: 768px)" srcset="images/catenergy-slim-500-rice-tablet@1x.png, images/catenergy-slim-500-rice-tablet@2x.png 2x">
+                <img class="product__image" width="68" height="87" src="images/catenergy-slim-500-rice-mobile@1x.png" srcset="images/catenergy-slim-500-rice-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
+              </picture>
             </a>
             <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
