--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
           <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.webp, images/logo-tablet@2x.webp 2x">
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
-        <svg class="logo__image-title" width="101" height="18">
+        <svg class="logo__image-title" width="101" height="18" alt="Логотип Cat Energy">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
       </a>
