--- a/source/catalog.html
+++ b/source/catalog.html
@@ -310,7 +310,7 @@
     </section>
   </main>
   <footer class="footer">
-    <section class="footer__address">
+    <section class="footer__address footer__address--background">
       <div class="container footer__container">
         <div class="footer__address-container">
           <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
