Переписал гл.стр на гриды, отредактировал мелкие сетки. Частично сделал каталог

--- a/source/index.html
+++ b/source/index.html
@@ -50,12 +50,12 @@
       <div class="container promo__container">
         <h1 class="promo__title">Функциональное<br>питание для котов</h1>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <picture class="promo__content-image">
+        <picture>
           <source type="image/png" media="(min-width: 1440px)" width="552" height="499" srcset="images/index-can-desktop@1x.png, images/index-can-desktop@2x.png 2x">
           <source type="image/webp" media="(min-width: 1440px)" width="552" height="499" srcset="images/index-can-desktop@1x.webp, images/index-can-desktop@2x.webp 2x">
           <source type="image/png" media="(min-width: 768px)" width="709" height="609" srcset="images/index-can-tablet@1x.png, images/index-can-tablet@2x.png 2x">
           <source type="image/webp" media="(min-width: 768px)" width="709" height="609" srcset="images/index-can-tablet@1x.webp, images/index-can-tablet@2x.webp 2x">
-          <img src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@1x.webp, images/index-can-mobile@2x.webp 2x" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
+          <img class="promo__content-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@1x.webp, images/index-can-mobile@2x.webp 2x" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
         </picture>
         <a class="promo__button button" href="form.html">Подобрать&nbsp;программу</a>
       </div>
@@ -129,13 +129,13 @@
               <source type="image/webp" width="560" height="512" media="(min-width: 768px)" srcset="images/bef-cat-tablet@1x.webp, images/bef-cat-tablet@2x.webp 2x">
               <img class="slider__before" width="280" height="256" src="images/bef-cat-mobile@1x.png" srcset="images/bef-cat-mobile@2x.png 2x" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
             </picture>
-            <picture>
+            <!-- <picture>
               <source type="image/png" width="560" height="512" media="(min-width: 1440px)" srcset="images/aft-cat-desktop@1x.png, images/aft-cat-desktop@2x.png 2x">
               <source type="image/webp" width="560" height="512" media="(min-width: 1440px)" srcset="images/aft-cat-desktop@1x.webp, images/aft-cat-desktop@2x.webp 2x">
               <source type="image/png" width="560" height="512" media="(min-width: 768px)" srcset="images/aft-cat-tablet@1x.png, images/aft-cat-tablet@2x.png 2x">
               <source type="image/webp" width="560" height="512" media="(min-width: 768px)" srcset="images/aft-cat-tablet@1x.webp, images/aft-cat-tablet@2x.webp 2x">
               <img class="slider__after" width="280" height="256" src="images/aft-cat-mobile@1x.png" srcset="images/aft-cat-mobile@2x.png 2x" alt="Фотография кота Бориса после замены обычного корма на корм Cat Energy.">
-            </picture>
+            </picture> -->
           </div>
         </div>
       </div>
