--- a/source/catalog.html
+++ b/source/catalog.html
@@ -236,11 +236,11 @@
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
-          <li class="catalog__item product product__more">
+          <li class="catalog__item product product--more">
             <div class="product__container">
               <h2 class="product__description">Показать еще 100500 товаров</h2>
               <p class="product__text">На самом деле вкусов гораздо больше!</p>
-              <a class="product__button--more button" href="#">Показать все</a>
+              <a class="button--more button" href="#">Показать все</a>
             </div>
           </li>
         </ul>
@@ -248,11 +248,11 @@
     </section>
 
     <section class="catalog catalog--other">
-      <div class="container-other">
+      <div class="catalog__other">
         <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
         <ul class="catalog__list catalog__list--other">
           <li class="catalog__item catalog__item--other">
-            <div class="product__container">
+            <div class="catalog__wrapper">
               <h2 class="catalog__product-title">Сахарозаменитель</h2>
               <dl class="catalog__product-info">
                 <dt class="visually-hidden">Колличество</dt>
@@ -265,7 +265,7 @@
           </li>
 
           <li class="catalog__item catalog__item--other">
-            <div class="product__container">
+            <div class="catalog__wrapper">
               <h2 class="catalog__product-title">Питьевая вода</h2>
               <dl class="catalog__product-info">
                 <dt class="visually-hidden">Объём</dt>
@@ -278,7 +278,7 @@
           </li>
 
           <li class="catalog__item catalog__item--other">
-            <div class="product__container">
+            <div class="catalog__wrapper">
               <h2 class="catalog__product-title">Молоко</h2>
               <dl class="catalog__product-info">
                 <dt class="visually-hidden">Объём</dt>
@@ -291,7 +291,7 @@
           </li>
 
           <li class="catalog__item catalog__item--other">
-            <div class="product__container">
+            <div class="catalog__wrapper">
               <h2 class="catalog__product-title">Витамины</h2>
               <dl class="catalog__product-info">
                 <dt class="visually-hidden">Объём</dt>
