Добавляет мелкие сетки основного каталога планшетная версия.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,19 +58,23 @@
                   <img class="product__image" width="68" height="87" src="images/catenergy-pro-500-chicken-mobile@1x.png" srcset="images/catenergy-pro-500-chicken-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
                 </picture>
               </a>
-              <div class="product__catalog-wrapper">
-                <a class="product__link" href="#">
-                  <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
-                </a>
-                <dl class="product__info">
+              <a class="product__link" href="#">
+                <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
+              </a>
+              <dl class="product__info">
+                <div class="product__info-item">
                   <dt>Масса</dt>
                   <dd>500&nbsp;г</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Вкус</dt>
                   <dd>Курица</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Цена</dt>
                   <dd>700&nbsp;₽</dd>
-                </dl>
-              </div>
+                </div>
+              </dl>
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
@@ -85,19 +89,23 @@
                   <img class="product__image" width="84" height="101" src="images/catenergy-pro-1000-chicken-mobile@1x.png" srcset="images/catenergy-pro-1000-chicken-mobile@2x.png 2x" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
                 </picture>
               </a>
-              <div class="product__catalog-wrapper">
-                <a class="product__link" href="#">
-                  <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
-                </a>
-                <dl class="product__info">
+              <a class="product__link" href="#">
+                <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
+              </a>
+              <dl class="product__info">
+                <div class="product__info-item">
                   <dt>Масса</dt>
                   <dd>1000&nbsp;г</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Вкус</dt>
                   <dd>Курица</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Цена</dt>
                   <dd>1000&nbsp;₽</dd>
-                </dl>
-              </div>
+                </div>
+              </dl>
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
@@ -112,19 +120,23 @@
                   <img class="product__image" width="68" height="87" src="images/catenergy-pro-500-fish-mobile@1x.png" srcset="images/catenergy-pro-500-fish-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
                 </picture>
               </a>
-              <div class="product__catalog-wrapper">
-                <a class="product__link" href="#">
-                  <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
-                </a>
-                <dl class="product__info">
+              <a class="product__link" href="#">
+                <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
+              </a>
+              <dl class="product__info">
+                <div class="product__info-item">
                   <dt>Масса</dt>
                   <dd>500&nbsp;г</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Вкус</dt>
                   <dd>Рыба</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Цена</dt>
                   <dd>700&nbsp;₽</dd>
-                </dl>
-              </div>
+                </div>
+              </dl>
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
@@ -139,19 +151,23 @@
                   <img class="product__image" width="84" height="101" src="images/catenergy-pro-1000-fish-mobile@1x.png" srcset="images/catenergy-pro-1000-fish-mobile@2x.png 2x" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба.">
                 </picture>
               </a>
-              <div class="product__catalog-wrapper">
-                <a class="product__link" href="#">
-                  <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
-                </a>
-                <dl class="product__info">
+              <a class="product__link" href="#">
+                <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
+              </a>
+              <dl class="product__info">
+                <div class="product__info-item">
                   <dt>Масса</dt>
                   <dd>1000&nbsp;г</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Вкус</dt>
                   <dd>Рыба</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Цена</dt>
                   <dd>1000&nbsp;₽</dd>
-                </dl>
-              </div>
+                </div>
+              </dl>
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
@@ -166,19 +182,23 @@
                   <img class="product__image" width="68" height="87" src="images/catenergy-slim-500-buckwheat-mobile@1x.png" srcset="images/catenergy-slim-500-buckwheat-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
                 </picture>
               </a>
-              <div class="product__catalog-wrapper">
-                <a class="product__link" href="#">
-                  <h2 class="product__title">Cat Energy<br> Slim 500&nbsp;г</h2>
-                </a>
-                <dl class="product__info">
+              <a class="product__link" href="#">
+                <h2 class="product__title">Cat Energy<br> Slim 500&nbsp;г</h2>
+              </a>
+              <dl class="product__info">
+                <div class="product__info-item">
                   <dt>Масса</dt>
                   <dd>500&nbsp;г</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Вкус</dt>
                   <dd>Гречка</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Цена</dt>
                   <dd>400&nbsp;₽</dd>
-                </dl>
-              </div>
+                </div>
+              </dl>
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
@@ -193,19 +213,23 @@
                   <img class="product__image" width="68" height="87" src="images/catenergy-slim-1000-buckwheat-mobile@1x.png" srcset="images/catenergy-slim-1000-buckwheat-mobile@2x.png 2x" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка.">
                 </picture>
               </a>
-              <div class="product__catalog-wrapper">
-                <a class="product__link" href="#">
-                  <h2 class="product__title">Cat Energy<br> Slim 1000&nbsp;г</h2>
-                </a>
-                <dl class="product__info">
+              <a class="product__link" href="#">
+                <h2 class="product__title">Cat Energy<br> Slim 1000&nbsp;г</h2>
+              </a>
+              <dl class="product__info">
+                <div class="product__info-item">
                   <dt>Масса</dt>
                   <dd>1000&nbsp;г</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Вкус</dt>
                   <dd>Гречка</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Цена</dt>
                   <dd>700&nbsp;₽</dd>
-                </dl>
-              </div>
+                </div>
+              </dl>
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
@@ -220,24 +244,28 @@
                   <img class="product__image" width="68" height="87" src="images/catenergy-slim-500-rice-mobile@1x.png" srcset="images/catenergy-slim-500-rice-mobile@2x.png 2x" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
                 </picture>
               </a>
-              <div class="product__catalog-wrapper">
-                <a class="product__link" href="#">
-                  <h2 class="product__title">Cat Energy<br> Slim 500&nbsp;г</h2>
-                </a>
-                <dl class="product__info">
+              <a class="product__link" href="#">
+                <h2 class="product__title">Cat Energy<br> Slim 500&nbsp;г</h2>
+              </a>
+              <dl class="product__info">
+                <div class="product__info-item">
                   <dt>Масса</dt>
                   <dd>500&nbsp;г</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Вкус</dt>
                   <dd>Гречка</dd>
+                </div>
+                <div class="product__info-item">
                   <dt>Цена</dt>
                   <dd>500&nbsp;₽</dd>
-                </dl>
-              </div>
+                </div>
+              </dl>
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
           <li class="catalog__item product product--more">
-            <div class="product__container">
+            <div class="product__more">
               <h2 class="product__description">Показать еще 100500 товаров</h2>
               <p class="product__text">На самом деле вкусов гораздо больше!</p>
               <a class="button--more button" href="#">Показать все</a>
