Добавляет мелкие сетки стр.каталога все состояния.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -264,7 +264,7 @@
               <a class="product__button button" href="#">Заказать</a>
             </div>
           </li>
-          <li class="catalog__item product product--more">
+          <li class="product product--more">
             <div class="product__more">
               <h2 class="product__description">Показать еще 100500 товаров</h2>
               <p class="product__text">На самом деле вкусов гораздо больше!</p>
@@ -320,6 +320,9 @@
           </li>
         </ul>
         <div class="other-action">
+          <svg class="other-action__gift" width="78" height="80px">
+            <use href="../icons/stack.svg#icon-gift"></use>
+          </svg>
           <p class="other-action__text">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
         </div>
       </div>
