--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,7 +23,7 @@
           <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.webp, images/logo-tablet@2x.webp 2x">
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
-        <svg class="logo__image-title" width="101" height="18" alt="Логотип Cat Energy">
+        <svg class="logo__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
       </a>
@@ -320,7 +320,7 @@
           </li>
         </ul>
         <div class="other-action">
-          <svg class="other-action__gift" width="78" height="80px">
+          <svg class="other-action__gift" width="78" height="80">
             <use href="../icons/stack.svg#icon-gift"></use>
           </svg>
           <p class="other-action__text">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
@@ -349,7 +349,8 @@
       </div>
     </section>
     <div class="container footer__link-container">
-      <a class="logo footer__logo" href="index.html" aria-current="page">
+      <a class="logo footer__logo" href="index.html">
+        <span class="visually-hidden">Логотип Catenergy</span>
         <svg class="logo__image-footer" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
