--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
           <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@2x.webp">
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
-        <svg class="logo__image-title" width="101" height="18" alt="Логотип Cat Energy">
+        <svg class="logo__image-title" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
       </a>
@@ -81,10 +81,8 @@
             </li>
           </ul>
         </fieldset>
-      </div>
-      <fieldset class="form__module form__module--contacts">
-        <div class="container main__form-container">
-          <legend class="form__module-legend legend-contacts">Контактрые&nbsp;данные<br> (владельца кота)</legend>
+        <fieldset class="form__module form__module--contacts">
+          <legend class="form__module-legend form__module-legend--contacts">Контактрые&nbsp;данные<br> (владельца кота)</legend>
           <ul class="form__module-list">
             <li class="form__module-item form__module-item--grow">
               <label class="form__field-label" for="e-mail">E-mail:*</label>
@@ -95,18 +93,14 @@
               <input class="form__field-input" type="tel" name="telephone" id="telephone" placeholder="8 (960) 900-60-90" required>
             </li>
           </ul>
-        </div>
-      </fieldset>
-      <fieldset class="form__module form__module--comment">
-        <div class="container main__form-container">
-          <legend class="form__module-legend legend-comment">Комментарий</legend>
-          <label class="form__comment-label" for="comment" aria-label="Комментарий"></label>
+        </fieldset>
+        <fieldset class="form__module form__module--comment">
+          <legend class="visually-hidden">Оставьте комментарий к заказу</legend>
+          <label class="form__comment-label" for="comment" aria-label="Комментарий">Комментарий</label>
           <textarea class="form__comment-input" name="comment" id="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
-        </div>
-      </fieldset>
-      <fieldset class="form__module form__module--extra">
-        <div class="container main__form-container">
-          <legend class="form__module-legend legent-extra">Дополнительно:</legend>
+        </fieldset>
+        <fieldset class="form__module form__module--extra">
+          <legend class="form__module-legend form__module-legend--extra">Дополнительно:</legend>
           <ul class="form__module-list form__module-list--extra">
             <li class="form__module-check">
               <input class="form__checkbox-input" type="checkbox" checked id="sweetener" name="sweetener">
@@ -125,9 +119,7 @@
               <label class="form__checkbox-label" for="vitamins">витамины</label>
             </li>
           </ul>
-        </div>
-      </fieldset>
-      <div class="container main__form-container">
+        </fieldset>
         <button class="form__button button" type="submit">Отправить заявку</button>
         <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
       </div>
@@ -154,7 +146,8 @@
       </div>
     </section>
     <div class="container footer__link-container">
-      <a class="logo footer__logo" href="index.html" aria-current="page">
+      <a class="logo footer__logo" href="index.html">
+        <span class="visually-hidden">Логотип Catenergy</span>
         <svg class="logo__image-footer" width="101" height="18">
           <use href="../icons/stack.svg#logo-title"></use>
         </svg>
