--- a/source/catalog.html
+++ b/source/catalog.html
@@ -268,7 +268,7 @@
             <div class="product__more">
               <h2 class="product__description">Показать еще 100500 товаров</h2>
               <p class="product__text">На самом деле вкусов гораздо больше!</p>
-              <a class="button--more button" href="#">Показать все</a>
+              <a class="button--more" href="#">Показать все</a>
             </div>
           </li>
         </ul>
@@ -377,9 +377,6 @@
       </div>
       <a class="footer__dev" href="#">
         <p class="footer__dev-name">HTML Academy</p>
-        <svg class="footer__dev-img" width="27" height="34">
-          <use href="../icons/stack.svg#html-academy"></use>
-        </svg>
       </a>
     </div>
   </footer>
