--- a/source/catalog.html
+++ b/source/catalog.html
@@ -268,7 +268,7 @@
             <div class="product__more">
               <h2 class="product__description">Показать еще 100500 товаров</h2>
               <p class="product__text">На самом деле вкусов гораздо больше!</p>
-              <a class="button--more" href="#">Показать все</a>
+              <a class="button button--more" href="#">Показать все</a>
             </div>
           </li>
         </ul>
