Удаляет изображения из полей контактрых данных

--- a/source/form.html
+++ b/source/form.html
@@ -83,12 +83,12 @@
         </fieldset>
         <fieldset class="form__module form__module--contacts">
           <legend class="form__module-legend form__module-legend--contacts">Контактрые&nbsp;данные<br> (владельца кота)</legend>
-          <ul class="form__module-list">
-            <li class="form__module-item form__module-item--grow">
+          <ul class="form__module-list form__module-list--contacts">
+            <li class="form__module-item">
               <label class="form__field-label" for="e-mail">E-mail:*</label>
               <input class="form__field-input" type="email" name="e-mail" id="e-mail" placeholder="kuklachev@gmail.com" required>
             </li>
-            <li class="form__module-item form__module-item--grow">
+            <li class="form__module-item">
               <label class="form__field-label" for="telephone">Телефон:*</label>
               <input class="form__field-input" type="tel" name="telephone" id="telephone" placeholder="8 (960) 900-60-90" required>
             </li>
