Исправляет иконки в инпутах. Добавил при помощи :has( )

--- a/source/form.html
+++ b/source/form.html
@@ -51,16 +51,19 @@
           <legend class="visually-hidden">Информация о питомце</legend>
           <ul class="form__module-list">
             <li class="form__module-item">
-              <label class="form__text-label" for="name">Имя:*</label>
-              <input class="form__text-input" type="text" name="name" id="name" placeholder="Барсик">
+              <label class="form__text-label" for="name">Имя:*
+                <input class="form__text-input" type="text" name="name" id="name" placeholder="Барсик">
+              </label>
             </li>
             <li class="form__module-item">
-              <label class="form__text-label" for="weigth">Вес(кг):*</label>
-              <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
+              <label class="form__text-label" for="weigth">Вес(кг):*
+                <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
+              </label>
             </li>
             <li class="form__module-item">
-              <label class="form__text-label" for="age">Возраст(лет):*</label>
-              <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
+              <label class="form__text-label" for="age">Возраст(лет):*
+                <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
+              </label>
             </li>
           </ul>
         </fieldset>
@@ -85,12 +88,20 @@
           <legend class="form__module-legend form__module-legend--contacts">Контактрые&nbsp;данные<br> (владельца кота)</legend>
           <ul class="form__module-list form__module-list--contacts">
             <li class="form__module-item">
-              <label class="form__field-label" for="e-mail">E-mail:*</label>
-              <input class="form__field-input" type="email" name="e-mail" id="e-mail" placeholder="kuklachev@gmail.com" required>
+              <label class="form__field-label" for="e-mail">E-mail:*
+                <input class="form__field-input" type="email" name="e-mail" id="e-mail" placeholder="kuklachev@gmail.com" required>
+              </label>
+              <!-- <svg class="form__module-icon" width="20" height="20">
+                <use href="../icons/stack.svg#icon-email"></use>
+              </svg> -->
             </li>
             <li class="form__module-item">
-              <label class="form__field-label" for="telephone">Телефон:*</label>
-              <input class="form__field-input" type="tel" name="telephone" id="telephone" placeholder="8 (960) 900-60-90" required>
+              <label class="form__field-label" for="telephone">Телефон:*
+                <input class="form__field-input" type="tel" name="telephone" id="telephone" placeholder="8 (960) 900-60-90" required>
+              </label>
+              <!-- <svg class="form__module-icon" width="20" height="20">
+                <use href="../icons/stack.svg#icon-phone"></use>
+              </svg> -->
             </li>
           </ul>
         </fieldset>
