Добавляет элементы слайдера со стилями без состояний

--- a/source/index.html
+++ b/source/index.html
@@ -121,22 +121,25 @@
           <p class="sample__price-text">Затраты на питание: <span>15&nbsp;000&nbsp;₽</span></p>
         </div>
         <div class="slider">
-          <div class="slider__images slider-before-after">
-            <picture>
-              <source type="image/png" width="560" height="512" media="(min-width: 1440px)" srcset="images/bef-cat-desktop@1x.png, images/bef-cat-desktop@2x.png 2x">
-              <source type="image/webp" width="560" height="512" media="(min-width: 1440px)" srcset="images/bef-cat-desktop@1x.webp, images/bef-cat-desktop@2x.webp 2x">
-              <source type="image/png" width="560" height="512" media="(min-width: 768px)" srcset="images/bef-cat-tablet@1x.png, images/bef-cat-tablet@2x.png 2x">
-              <source type="image/webp" width="560" height="512" media="(min-width: 768px)" srcset="images/bef-cat-tablet@1x.webp, images/bef-cat-tablet@2x.webp 2x">
-              <img class="slider__before" width="280" height="256" src="images/bef-cat-mobile@1x.png" srcset="images/bef-cat-mobile@2x.png 2x" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
-            </picture>
-            <picture>
-              <source type="image/png" width="560" height="512" media="(min-width: 1440px)" srcset="images/aft-cat-desktop@1x.png, images/aft-cat-desktop@2x.png 2x">
-              <source type="image/webp" width="560" height="512" media="(min-width: 1440px)" srcset="images/aft-cat-desktop@1x.webp, images/aft-cat-desktop@2x.webp 2x">
-              <source type="image/png" width="560" height="512" media="(min-width: 768px)" srcset="images/aft-cat-tablet@1x.png, images/aft-cat-tablet@2x.png 2x">
-              <source type="image/webp" width="560" height="512" media="(min-width: 768px)" srcset="images/aft-cat-tablet@1x.webp, images/aft-cat-tablet@2x.webp 2x">
-              <img class="slider__after" width="280" height="256" src="images/aft-cat-mobile@1x.png" srcset="images/aft-cat-mobile@2x.png 2x" alt="Фотография кота Бориса после замены обычного корма на корм Cat Energy.">
-            </picture>
+          <picture>
+            <source type="image/png" width="560" height="512" media="(min-width: 1440px)" srcset="images/bef-cat-desktop@1x.png, images/bef-cat-desktop@2x.png 2x">
+            <source type="image/webp" width="560" height="512" media="(min-width: 1440px)" srcset="images/bef-cat-desktop@1x.webp, images/bef-cat-desktop@2x.webp 2x">
+            <source type="image/png" width="560" height="512" media="(min-width: 768px)" srcset="images/bef-cat-tablet@1x.png, images/bef-cat-tablet@2x.png 2x">
+            <source type="image/webp" width="560" height="512" media="(min-width: 768px)" srcset="images/bef-cat-tablet@1x.webp, images/bef-cat-tablet@2x.webp 2x">
+            <img class="slider__image slider__image--befor" width="280" height="256" src="images/bef-cat-mobile@1x.png" srcset="images/bef-cat-mobile@2x.png 2x" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
+          </picture>
+          <div class="slider__pull-wrapper">
+            <button class="slider__pull" type="button" tabindex="0">
+              <span class="visually-hidden">Переместите ползунок влево или вправо</span>
+            </button>
           </div>
+          <picture>
+            <source type="image/png" width="560" height="512" media="(min-width: 1440px)" srcset="images/aft-cat-desktop@1x.png, images/aft-cat-desktop@2x.png 2x">
+            <source type="image/webp" width="560" height="512" media="(min-width: 1440px)" srcset="images/aft-cat-desktop@1x.webp, images/aft-cat-desktop@2x.webp 2x">
+            <source type="image/png" width="560" height="512" media="(min-width: 768px)" srcset="images/aft-cat-tablet@1x.png, images/aft-cat-tablet@2x.png 2x">
+            <source type="image/webp" width="560" height="512" media="(min-width: 768px)" srcset="images/aft-cat-tablet@1x.webp, images/aft-cat-tablet@2x.webp 2x">
+            <img class="slider__image slider__image--after" width="280" height="256" src="images/aft-cat-mobile@1x.png" srcset="images/aft-cat-mobile@2x.png 2x" alt="Фотография кота Бориса после замены обычного корма на корм Cat Energy.">
+          </picture>
         </div>
       </div>
     </section>
